<resources>
    <string name="app_name">Teamplay</string>

    <string name="kakao_app_key">0fffa5fb7da20ecca7aa2f3955781245</string>
    <string name="nhn_oauth_client_id">oFdIa_Iv4e3cA9zKIxxJ</string>
    <string name="nhn_oauth_client_secret">hivtftbewr</string>
    <string name="nhn_oauth_client_name">TeamPlay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--onBoarding page-->
    <string name="start_for_kakao">카카오톡으로 시작하기</string>
    <string name="start_for_naver">네이버로 시작하기</string>
    <string name="start_for_google">구글로 시작하기</string>
    <string name="start_for_email_onboarding">이메일로 시작하기</string>

    <!--signIn, signUp page-->
    <string name="start_for_email">이메일로 빠르게 팀플레이 시작!</string>
    <string name="signin_password">이미 팀플레이어시네요!</string>
    <string name="signin_btn">팀플레이 시작!</string>
    <string name="signup_email_btn">이 이메일로 시작</string>
    <string name="signup_password">패스워드와 닉네임만 입력하면 팀플레이 시작!</string>
    <string name="signup_nickname">이제 멋진 닉네임만 정하면 끝이에요!</string>
    <string name="next">다음</string>
    <string name="signin_error_email">올바른 이메일을 입력해주세요.</string>
    <string name="signin_error_password">비밀번호가 일치하지 않습니다.</string>
    <string name="signup_error_email">올바른 이메일을 입력해주세요.</string>
    <string name="signup_error_password">올바른 비밀번호를 입력해주세요.</string>
    <string name="signup_error_nickname">올바른 닉네임을 입력해주세요.</string>

    <string name="myTeamLogout">로그아웃</string>
    <string name="myTeamUserNameHint">안녕하세요,</string>
    <string name="myTeamUserNameExample">상암동 데릭로즈님</string>
    <string name="myTeamSinceExample">2017.02.11 창설  |  현재회원수 52명</string>

    <string name="myTeamSelectTeamTitle">팀 찾기</string>
    <string name="myTeamSelectTeamDescription">당신을 기다리고 있는 팀들을 찾아보세요</string>
    <string name="myTeamSelectTeamCount">현재 258개의 팀이 팀플레이 중입니다</string>
    <string name="edit_post_delete">삭제</string>
    <string name="edit_post_posting">글쓰기</string>
    <string name="edit_post_notice">공지사항</string>
    <string name="edit_post_edit_text_hint">게시글 내용을 작성해 주세요</string>
    <string name="edit_post_map">지도</string>
    <string name="edit_post_share">공유</string>
    <string name="edit_post_camera">사진</string>

    <!--match list-->
    <string name="match_list_header">매치 리스트</string>
    <string name="match_list_submit">매치등록</string>

    <!--match detail page-->
    <string name="detail_submit">매치신청</string>
    <string name="detail_content">매치정보</string>
    <string name="detail_host_name">호스트 팀</string>
    <string name="detail_date">매치 날짜</string>
    <string name="detail_time">매치 시간</string>
    <string name="detail_location">매치 장소</string>
    <string name="detail_style">매치 방식</string>
    <string name="detail_introduce">한줄 인사</string>
    <string name="detail_rule">매치 규칙</string>
    <string name="detail_rule_content">일반 농구 규칙상으로는 경기 시간은 4개 쿼터(Quarter)로
10분씩 갈라지며, 1-2쿼터 사이와 3-4쿼터 사이는 2분,  2-3쿼터
사이(하프타임)에는 15분 쉰다.  중등부는 쿼터당 8분, 초등부는
전후반 각 15분으로 플레이한다.

* 팀플레이는 매치 중 또는 매치와 관련해 일어난 금전이나
   안전을 비롯한 어떠한 문제에 대해서 책임이 없음을 알립니다</string>
    <string name="detail_address_request">매치가 성사된 후 매치 호스트가 연락을 할 수 있는 연락처나
카카오톡 아이디 등을 남겨주세요.</string>

    <!-- team_main -->
    <string name="team_main_matching_list">매칭 리스트</string>
    <string name="team_main_matching_schedule">매칭 스케줄</string>
    <string name="team_main_team_feed_label">동호회 게시판</string>
    <string name="team_main_description_format">%s 창설 | 현재 회원수 %s명</string>
    <string name="item_notice_type_label_notice">Notice</string>
    <string name="item_result_type_label_result">Result</string>
    <string name="item_result_type_match_result">경기결과</string>
    <string name="my_html">%s 과의 경기에서 \n 승리하셨습니다.</string>
    <string name="team_main_feed_count_format">%s posts</string>
    <string name="edit_post_title_hint">공지 제목을 입력해 주세요</string>

    <!-- TeamSearchFilter -->
    <string name="team_search_filter">검색하기</string>
    <string name="team_search_filter_condition">검색조건</string>
    <string name="team_search_filter_clear">초기화</string>
    <string name="team_search_filter_region">활동지역</string>
    <string name="team_search_filter_character">팀성격</string>

    <!-- String format -->
    <string name="item_team_list_header_count">조건에 맞는 팀이 %d개 있어요</string>
    <string name="item_team_list_address_and_count">%s 소재 | 현재회원수 %d명</string>

    <!-- MatchSearch -->
    <string name="search_submit">검색하기</string>
    <string name="search_box_text">매치를 검색해보세요</string>
    <string name="search_condition">검색 조건</string>
    <string name="search_init">초기화</string>
    <string name="search_date">매치 날짜</string>
    <string name="search_location">매치 장소</string>
    <string name="search_rule">경기 방식</string>
    <string name="search_city">찾으시는 장소를 입력해주세요.</string>

    <string-array name="match_result_input_score_detail">
        <item>리바운드</item>
        <item>어시스트</item>
        <item>스틸</item>
        <item>블록</item>
        <item>2점</item>
        <item>3점</item>
    </string-array>

    <string-array name="create_match_type">
        <item>3대3 반코트</item>
        <item>5대5 반코트</item>
        <item>5대5 풀코트</item>
    </string-array>

</resources>
