<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="kr.yapp.teamplay.presentation.match_detail.MatchDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:paddingVertical="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/match_detail_ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left_white"
                android:tint="@color/colorBoldBlack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/match_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@{viewModel.matchInfo.title}"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="@+id/match_detail_ic_back"
                app:layout_constraintStart_toEndOf="@+id/match_detail_ic_back"
                app:layout_constraintTop_toTopOf="@+id/match_detail_ic_back" />

            <TextView
                android:id="@+id/match_detail_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@string/detail_submit"
                android:textColor="@color/colorRed"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="@+id/match_detail_ic_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/match_detail_ic_back" />

            <View
                android:layout_width="0dp"
                android:layout_height="1sp"
                android:layout_marginTop="18dp"
                android:background="@color/colorVeryLightPink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_ic_back" />

            <TextView
                android:id="@+id/match_detail_match_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@string/detail_content"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_ic_back" />

            <TextView
                android:id="@+id/match_detail_host_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@string/detail_host_name"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_match_info" />

            <TextView
                android:id="@+id/match_detail_game_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@string/detail_date"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_host_team" />

            <TextView
                android:id="@+id/match_detail_game_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@string/detail_time"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_game_day" />

            <TextView
                android:id="@+id/match_detail_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@string/detail_location"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_game_time" />

            <TextView
                android:id="@+id/match_detail_game_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@string/detail_style"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_location" />

            <TextView
                android:id="@+id/match_detail_oneline_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@string/detail_introduce"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_game_type" />

            <TextView
                android:id="@+id/match_detail_host_team_con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="25dp"
                android:text="@{viewModel.matchInfo.hostName}"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@id/match_detail_host_team"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_match_info" />

            <TextView
                android:id="@+id/match_detail_game_day_con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.matchInfo.matchDate}"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@+id/match_detail_game_day"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_host_team" />

            <TextView
                android:id="@+id/match_detail_game_time_con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.matchInfo.matchTime}"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@+id/match_detail_game_time"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_game_day" />

            <TextView
                android:id="@+id/match_detail_location_con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.matchInfo.location}"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@+id/match_detail_location"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_game_time" />

            <TextView
                android:id="@+id/match_detail_game_type_con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.matchInfo.matchStyle}"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@+id/match_detail_game_type"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_location" />

            <TextView
                android:id="@+id/match_detail_oneline_intro_con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@{viewModel.matchInfo.introduce}"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@+id/match_detail_oneline_intro"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_game_type" />

            <View
                android:layout_width="0dp"
                android:layout_height="1sp"
                android:layout_marginTop="20dp"
                android:background="@color/colorVeryLightPink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_oneline_intro" />

            <TextView
                android:id="@+id/match_detail_match_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@string/detail_rule"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_oneline_intro" />

            <TextView
                android:id="@+id/match_detail_match_rule_content"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:lineHeight="24dp"
                android:lineSpacingMultiplier="1.5"
                android:text="@{viewModel.matchInfo.matchRule}"
                android:textColor="@color/colorBoldBlack"
                android:textSize="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_match_rule" />

            <View
                android:layout_width="0dp"
                android:layout_height="1sp"
                android:layout_marginTop="20dp"
                android:background="@color/colorVeryLightPink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_match_rule_content" />

            <TextView
                android:id="@+id/match_detail_address_request"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/sf_pro_bold"
                android:lineSpacingMultiplier="1.3"
                android:lineHeight="22dp"
                android:text="@string/detail_address_request"
                android:textColor="@color/colorBoldBlack"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_match_rule_content" />

            <EditText
                android:id="@+id/match_detail_address_request_input"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/match_list_searchbox"
                android:lineHeight="22dp"
                android:lineSpacingExtra="8dp"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/match_detail_address_request" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
