<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="kr.yapp.teamplay.presentation.signin.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:srcCompat="@drawable/logotype" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="55dp"
            android:layout_marginTop="260dp"
            android:layout_marginBottom="140dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

        <TextView
            android:id="@+id/btn_signup_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="55dp"
            android:layout_marginBottom="90dp"
            android:background="@drawable/onboarding_round_button"
            android:backgroundTint="@color/colorRed"
            android:text="@string/signup_email_btn"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:visibility="visible"
            android:onClick="@{() -> viewModel.clickSignUpEmailButton()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btn_signup_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="55dp"
            android:layout_marginBottom="90dp"
            android:background="@drawable/onboarding_round_button"
            android:backgroundTint="@color/colorRed"
            android:text="@string/next"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            android:onClick="@{() -> viewModel.clickSignUpPasswordButton()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btn_signup_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="55dp"
            android:layout_marginBottom="90dp"
            android:background="@drawable/onboarding_round_button"
            android:backgroundTint="@color/colorRed"
            android:text="@string/signin_btn"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:visibility="invisible"
            android:onClick="@{() -> viewModel.clickSignUpNicknameButton()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>